--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Andrew Platner's Pages</title>
+        <h1>Andrew Platner's Pages</h1>
         
     </head>
 <body>
