--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <h1>Andrew Platner's Pages</h1>
-        
+        <title>Andrew Platner's Pages</title>
+        <h1>Welcome</h1>
     </head>
 <body>
     <script>
