--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <p>More coming soon - until then, please check my projects on <a href="http://github.com/APlatner">Github</a> or
     <button onclick="learnMore()">click here</button> to learn more about me</p>
     <div id="learnMore" style="display: none;">
-        I don't know what you were expecting, nincs itt semmi. 
+        There's nothing here really. This is just a proof of concept
     </div>
 </body>
 
