--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" href="style.css">
         <title>Andrew Platner's Pages</title>
-        
+        <script src="main.js"></script>
     </head>
     <body>
         <h1>
@@ -13,22 +13,26 @@
                 <div class="button" onclick="aboutMe()">/about me</div>
             </div>
         </h1>
-        <script>
-            function aboutMe() {
-                var x = document.getElementById("aboutMe");
-                if (x.style.display === "none") {
-                x.style.display = "block";
-                } else {
-                x.style.display = "none";
-                }
-            } 
-        </script>
-
-    <p>More coming soon - until then, please check my projects on <a href="http://github.com/APlatner">Github</a></p>
-    <div class="format" id="aboutMe" style="display: none;">
-        There's nothing here really. This is just a proof of concept
+    <p>
+    <div class="format" id="welcome">
+        Check out my projects or about me to learn more
     </div>
+    <div id="projects" style="display: none;">
+        <div class="button" onclick="games()">> Games</div>
+        <div class="format" id="games" style="display: none;"><a href="https://axial-studios.itch.io/hostile-tankover">Hostile Tankover</a></div>
+        <div class="button" onclick="simulators()">> Simulators</div>
+        <div class="format" id="simulators" style="display: none;">Minecraft computer</div>
+    </div>
+    <div class="format" id="aboutMe" style="display: none;">
+        name: Andrew Platner<br>
+        crime: Being way too cool<br>
+        github: <a href="http://github.com/APlatner">APlatner</a><br>
+        resume: <a href="">PDF</a>
+    </div>
+    </p>
+    <script>
         
+    </script>
     </body>
 
 </html>
