--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         name: Andrew Platner<br>
         crime: Being way too cool<br>
         github: <a href="http://github.com/APlatner">APlatner</a><br>
-        resume: <a href="">PDF</a>
+        resume: <a href="Andrew%20Platner%20Resume%205.20.2020.pdf">PDF</a>
     </div>
     </p>
     <script>
