--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="style.css">
         <title>Andrew Platner's Pages</title>
         <script src="main.js"></script>
+        <script src="Andrew Platner Resume 5.20.2020.pdf"></script>
     </head>
     <body>
         <h1>
@@ -27,7 +28,7 @@
         name: Andrew Platner<br>
         crime: Being way too cool<br>
         github: <a href="http://github.com/APlatner">APlatner</a><br>
-        resume: <a href="Andrew%20Platner%20Resume%205.20.2020.pdf">PDF</a>
+        resume: <a href="Andrew Platner Resume 5.20.2020.pdf">PDF</a>
     </div>
     </p>
     <script>
