--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     </div>
     <div id="projects" style="display: none;">
         <div class="button" onclick="games()">> Games</div>
-        <div class="format" id="games" style="display: none;"><a href="Epsylon.html">Epsylon</a></div>
-        <div class="format" id="games" style="display: none;"><a href="https://axial-studios.itch.io/hostile-tankover">Hostile Tankover</a></div>
+        <div class="format" id="games_0" style="display: none;"><a href="Epsylon.html">Epsylon</a></div>
+        <div class="format" id="games_1" style="display: none;"><a href="https://axial-studios.itch.io/hostile-tankover">Hostile Tankover</a></div>
         <div class="button" onclick="simulators()">> Simulators</div>
         <div class="format" id="simulators" style="display: none;">Minecraft computer</div>
     </div>
