--- a/Epsylon.html
+++ b/Epsylon.html
@@ -5,11 +5,7 @@
         <title>Epsylon</title>
     </head>
     <body>
-        <h1>
-            <div class="flex-container">
-                <div style="flex-grow: 10">/Welcome </div>
-            </div>
-        </h1>
+        <h1>Epsylon</h1>
     <p>
     </p>
     </body>
