--- a/epsylon_main.html
+++ b/epsylon_main.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="style.css">
+        <link href='https://fonts.googleapis.com/css?family=Aldrich' rel='stylesheet'>
+        <link rel="stylesheet" href="epsylon_style.css">
         <title>Epsylon</title>
     </head>
     <body>
