--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
         <script src="Andrew Platner Resume 5.20.2020.pdf"></script>
     </head>
     <body>
-        <h1>
+        <header>
             <div class="flex-container">
                 <div style="flex-grow: 10">/Welcome </div>
                 <div class="button" onclick="projects()">/projects</div>
                 <div class="button" onclick="aboutMe()">/about me</div>
             </div>
-        </h1>
+        </header>
     <p>
     <div class="format" id="welcome">
         Check out my projects or about me to learn more
