--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link href='https://fonts.googleapis.com/css?family=Aldrich' rel='stylesheet'>
         <link rel="stylesheet" href="style.css">
         <title>Andrew Platner's Pages</title>
         <script src="main.js"></script>
@@ -20,7 +21,7 @@
     </div>
     <div id="projects" style="display: none;">
         <div class="button" onclick="games()">> Games</div>
-        <div class="format" id="games_0" style="display: none;"><a href="Epsylon.html">Epsylon</a></div>
+        <div class="format" id="games_0" style="display: none;"><a href="Epsylon/Epsylon.html">Epsylon</a></div>
         <div class="format" id="games_1" style="display: none;"><a href="https://axial-studios.itch.io/hostile-tankover">Hostile Tankover</a></div>
         <div class="button" onclick="simulators()">> Simulators</div>
         <div class="format" id="simulators" style="display: none;">Minecraft computer</div>
