--- a/Epsylon/epsylon.html
+++ b/Epsylon/epsylon.html
@@ -11,6 +11,8 @@
     </head>
     <body>
         <div id="root"></div>
+        <script src="https://unpkg.com/react@17/umd/react.production.min.js" crossorigin></script>
+        <script src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js" crossorigin></script>
         <script src="scripts/epsylon_main.js"></script>
     </body>
 </html>
